[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/gameplay/asteroid_big.png" type="Texture" id=1]
[ext_resource path="res://asteroid/Asteroid.gd" type="Script" id=2]

[node name="Asteroid" type="Area2D" groups=["damageable"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.985124, 0.985978 )
polygon = PoolVector2Array( -39.5889, -33.4693, -32.4832, -47.6684, 8, -70, 43.6493, -69.9813, 48.7248, -61.8675, 50.755, -57.8106, 54.8154, -42.5973, 60.906, -20.2844, 61, 37, 55.8305, 48.6826, 35.5285, 73.0239, -40.604, 73.0239, -45.6795, 60.8533, -53.8003, 51.7253, -63, 36, -63, 16, -62.9362, 5.07111, -54.8154, -9.12799, -47.7097, -25.3555 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1, 0.499997 )
scale = Vector2( 6.3, 7.25 )

[connection signal="area_entered" from="." to="." method="_on_Asteroid_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Asteroid_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
